upload resume as pdf

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="https://www.linkedin.com/in/dhackelman/" target="_blank" ><img src="./src/styles/images/linked.png" /></a>
           </div>
           <div class="contact-row">
-            <a href="https://docs.google.com/document/d/1d0pkwfOCGs-SOLU5NTnRkBgcyIv_4UHOSummcI17PYE/pub?embedded=true" target="_blank" ><img src="./src/styles/images/resume-icon.svg" /></a>
+            <a href="./src/styles/images/Drew.Hackelman.FullstackDev.2017.pdf" target="_blank" ><img src="./src/styles/images/resume-icon.svg" /></a>
           </div>
         </div>
     </div>
